--- a/site rotv/index.html
+++ b/site rotv/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <!-- Meniu hamburger -->
+    <!-- Meniu hamburger [in work..] 
     <div class="off-screen-menu">
         <ul>
             <li><a href="#">Live</a></li>
@@ -28,7 +28,7 @@
             <span></span>
         </div>
     </nav>
-
+    -->
     <!-- Meniu Navigatie -->
 
     <nav aria-label="Meniu principal">
