--- a/site rotv/live/live.html
+++ b/site rotv/live/live.html
@@ -34,7 +34,7 @@
     
     <main>
         <figure>
-            <img src="../resurse/live.png" alt="Live streaming ROTV" loading="lazy">
+            <img id="live-start" src="../resurse/live.png" alt="Live streaming ROTV" loading="lazy">
             <h1>ROTV LIVE - chiar acum</h1>
         </figure>
 
