Responsive home page (finally)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span></span>
     </div>
 
-    
+
     
     <!-- Main-->
     <main>
@@ -51,7 +51,7 @@
 
         <!-- Aside [API'S in the future?] -->
         <aside>
-            <h2 id="ultima-ora">stiri de ultima ora</h2>
+            <h2 id="ultima-ora">Stiri de ultima ora</h2>
             <article> 
                 <a href="">
                     <img src="/resurse/vremea.png" alt="vremea">
