--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="logo.png" />
-    <title>ROTV - Welcome</title>
+    <title>CobraNEWS - Welcome</title>
   </head>
   <body>
     <!-- NAVIGATION BAR -->
     <nav aria-label="Meniu principal">
       <a href="index.html" aria-label="Pagina principală">
-        <img id="logo" src="logo.png" alt="logo ROTV" />
+        <img id="logo" src="logo.png" alt="logo cobranews" />
       </a>
 
       <ul class="nav-left">
@@ -66,7 +66,7 @@
       <article class="stiri-item">
         <a href="" class="stiri-text">
           <img src="resurse/fluor.jpg" alt="apa in fluor" />
-          <p>Adevărul despre fluorul din apă, sare și pasta de dinți</p>
+          <p>Adevărul despre fluorul din apă, sare și pasta de dinți, explicat</p>
         </a>
       </article>
 
