Removed the nav tabs, lots of -
Big transition coming indeed

--- a/index.html
+++ b/index.html
@@ -15,21 +15,17 @@
       </a>
 
       <ul class="nav-left">
-        <li><a href="live/live.html">Live➣</a></li>
         <li><a href="stiri/stiri.html">Stiri➣</a></li>
-        <li><a href="articole/articole.html">Articole➣</a></li>
-        <li><a href="emisiuni/emisiuni.html">Emisiuni➣</a></li>
       </ul>
       <ul class="nav-right">
-        <li><a href="despre/despre.html">Despre➣</a></li>
         <li><a href="contact/contact.html">Contact➣</a></li>
         <!-- Dark mode toggle button (right corner) -->
         <li>
           <button
             id="theme-toggle"
             class="theme-toggle"
-            aria-label="Comută modul întunecat"
-            title="Mod întunecat/Mod luminos"
+            aria-label="Toggle dark mode"
+            title="Dark/Light mode"
           >
             🌙
           </button>
@@ -66,7 +62,9 @@
       <article class="stiri-item">
         <a href="" class="stiri-text">
           <img src="resurse/fluor.jpg" alt="apa in fluor" />
-          <p>Adevărul despre fluorul din apă, sare și pasta de dinți, explicat</p>
+          <p>
+            Adevărul despre fluorul din apă, sare și pasta de dinți, explicat
+          </p>
         </a>
       </article>
 
@@ -127,8 +125,6 @@
     </section>
     <hr />
 
-
-
     <!-- Footer -->
     <footer>
       <section class="footer-content">
@@ -137,7 +133,6 @@
         </figure>
         <nav class="footer-links">
           <ul>
-            <li><a href="despre/despre.html">Despre</a></li>
             <li><a href="contact/contact.html">Contact</a></li>
           </ul>
         </nav>
