--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,13 +9,13 @@
   </head>
   <body>
     <!-- NAVIGATION BAR -->
-    <nav aria-label="Meniu principal">
-      <a href="index.html" aria-label="Pagina principală">
-        <img id="logo" src="logo.png" alt="logo cobranews" />
+    <nav aria-label="Main menu">
+      <a href="index.html" aria-label="Home page">
+        <img id="logo" src="logo.png" alt="CobraNEWS logo" />
       </a>
 
       <ul class="nav-left">
-        <li><a href="stiri/stiri.html">Stiri➣</a></li>
+        <li><a href="stiri/stiri.html">News➣</a></li>
       </ul>
       <ul class="nav-right">
         <li><a href="contact/contact.html">Contact➣</a></li>
@@ -44,81 +44,84 @@
     <main>
       <article>
         <a href="/stiri-set/stire-set.html" class="prima-stire">
-          <img id="prima-imagine" src="resurse/avion.jpg" alt="Avion F-35" />
+          <img
+            id="prima-imagine"
+            src="resurse/avion.jpg"
+            alt="F-35 fighter jet"
+          />
           <h1 id="primul-text">
-            România și SUA au semnat protocolul privind achiziția a 32 de
-            avioane de luptă „invizibile” F-35
+            Romania and the United States signed the protocol for purchasing 32
+            "invisible" F-35 fighter jets
           </h1>
         </a>
       </article>
     </main>
 
-    <!-- Sectiunea stiri -->
+    <!-- News section -->
     <header>
-      <a href="stiri/stiri.html">Stiri actuale</a>
+      <a href="stiri/stiri.html">Latest news</a>
     </header>
 
     <section class="stiri-grid">
       <article class="stiri-item">
         <a href="" class="stiri-text">
-          <img src="resurse/fluor.jpg" alt="apa in fluor" />
+          <img src="resurse/fluor.jpg" alt="fluoride in water" />
           <p>
-            Adevărul despre fluorul din apă, sare și pasta de dinți, explicat
+            The truth about fluoride in water, salt and toothpaste, explained
           </p>
         </a>
       </article>
 
       <article class="stiri-item">
         <a href="" class="stiri-text">
-          <img src="resurse/avalansa.jpg" alt="avalansa" />
-          <p>
-            Pericol de avalanșe la înălțimi mari. Avertismentul salvamontiştilor
-          </p>
+          <img src="resurse/avalansa.jpg" alt="avalanche" />
+          <p>Avalanche danger at high altitudes. Mountain rescuers warn</p>
         </a>
       </article>
 
       <article class="stiri-item">
         <a href="" class="stiri-text">
-          <img src="resurse/nita.jpg" alt="Florin Niță " />
+          <img src="resurse/nita.jpg" alt="Florin Niță" />
           <p>
-            Diagnosticul primit Florin Niță după accidentarea de la meciul din
-            Cipru
+            The diagnosis Florin Niță received after the injury in the match in
+            Cyprus
           </p>
         </a>
       </article>
     </section>
-    <hr <!-- Sectiunea articole -- />
+    <hr />
+    <!-- Articles section -->
     <header id="articole">
-      <a href="articole/articole.html">Articole</a>
+      <a href="articole/articole.html">Articles</a>
     </header>
 
     <section class="articole-grid">
       <article class="articole-item">
         <a href="">
-          <img src="resurse/cernobil.jpg" alt="cernobil" />
+          <img src="resurse/cernobil.jpg" alt="Chernobyl" />
           <p>
-            Viața la Cernobîl după 32 de ani de la dezastrul nuclear: cum arată
-            în prezent orașul-fantomă
+            Life in Chernobyl 32 years after the nuclear disaster: what the
+            ghost town looks like today
           </p>
         </a>
       </article>
 
       <article class="articole-item">
         <a href="">
-          <img src="resurse/ferma.jpeg" alt="ferma" />
+          <img src="resurse/ferma.jpeg" alt="farm" />
           <p>
-            Ferma de oi și capre de 150 mii de euro. Istoria lui Vasile, care a
-            lăsat strainatatea și a revenit in tara
+            The €150k sheep and goat farm. Vasile's story of leaving abroad and
+            returning home
           </p>
         </a>
       </article>
 
       <article class="articole-item">
         <a href="">
-          <img src="resurse/witcher.png" alt="the witcher" />
+          <img src="resurse/witcher.png" alt="The Witcher" />
           <p>
-            The Witcher 4 a intrat în producție completă și este cu un pas mai
-            aproape de lansare
+            The Witcher 4 has entered full production and is one step closer to
+            release
           </p>
         </a>
       </article>
@@ -129,7 +132,7 @@
     <footer>
       <section class="footer-content">
         <figure class="footer-logo">
-          <img src="logo.png" alt="RO TV Logo" />
+          <img src="logo.png" alt="CobraNEWS logo" />
         </figure>
         <nav class="footer-links">
           <ul>
@@ -137,10 +140,10 @@
           </ul>
         </nav>
       </section>
-
-      <!-- <section class="footer-drepturi">
-            <p>© 2025 RO TV. Toate drepturile rezervate.</p>
-        </section> -->
+      <!-- Rights (uncomment if needed)
+      <section class="footer-drepturi">
+        <p>© 2025 CobraNEWS. All rights reserved.</p>
+      </section> -->
     </footer>
 
     <script src="script.js"></script>
