--- a/stiri/stiri.html
+++ b/stiri/stiri.html
@@ -1,231 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stiri.css">
-    <link rel="icon" type="image/x-icon" href="../logo.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Global site styles -->
+    <link rel="stylesheet" href="../style.css" />
+    <!-- Page-specific tweaks -->
+    <link rel="stylesheet" href="stiri.css" />
+    <link rel="icon" type="image/x-icon" href="../logo.png" />
     <title>Stiri</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- Navigation -->
 
-    <!-- Meniu Navigatie -->
-
-    <nav aria-label="Meniu principal">
-        <a href="../index.html" aria-label="Pagina principală">
-            <img id="logo" src="../logo.png" alt="logo ROTV">
-        </a>
-                
-        <ul class="nav-left">
-            <li><a href="/live/live.html">Live</a></li>
-            <li><a href="/stiri/stiri.html" class="active">Stiri</a></li>
-            <li><a href="/articole/articole.html">Articole</a></li>
-            <li><a href="/emisiuni/emisiuni.html">Emisiuni</a></li>
-        </ul>
-        <ul class="nav-right">
-            <li><a href="/despre/despre.html">Despre noi</a></li>
-            <li><a href="/despre/despre.html">Contact</a></li>
-        </ul>    
+    <nav aria-label="Main menu">
+      <a href="../index.html" aria-label="Home page">
+        <img id="logo" src="../logo.png" alt="CobraNEWS logo" />
+      </a>
+      <ul class="nav-left">
+        <li><a href="/stiri/stiri.html" class="active">News➣</a></li>
+      </ul>
+      <ul class="nav-right">
+        <li><a href="/contact/contact.html">Contact➣</a></li>
+        <li>
+          <button
+            id="theme-toggle"
+            class="theme-toggle"
+            aria-label="Toggle dark mode"
+            title="Dark/Light mode"
+          >
+            🌙
+          </button>
+        </li>
+      </ul>
     </nav>
 
+    <!-- Politics -->
 
-
-    <!-- Politica -->
-
-    <header>
-        <p>Politica</p> 
-    </header>
-
+    <header><a href="#politica">Politics</a></header>
 
     <section class="stiri-grid">
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/nicusor.jpg" alt="Nicusor Dan"> 
-                <p>Nicuşor Dan: Modul în care se va desfăşura acest al doilea mandat depinde de votul bucureştenilor</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/nicusor.jpg" alt="Nicusor Dan" />
+          <p>
+            Nicuşor Dan: How this second term will unfold depends on Bucharest
+            voters
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/avion.jpg" alt="avion de lupta">
-                <p>România și SUA au semnat protocolul privind achiziția a 32 de avioane de luptă „invizibile” F-35</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/avion.jpg" alt="avion de lupta" />
+          <p>
+            Romania and the U.S. signed the protocol to buy 32 "invisible" F-35
+            fighter jets
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/mr-sanatatii.jpg" alt="ministrul sanatatii">
-                <p>Ministerul Sănătății vrea să interzică anumite alimente nocive în școli. Ce produse sunt pe listă</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/mr-sanatatii.jpg" alt="ministrul sanatatii" />
+          <p>
+            Health Ministry wants to ban certain harmful foods in schools.
+            What's on the list
+          </p>
+        </a>
+      </article>
     </section>
 
+    <!-- Economy -->
 
-
-    <!-- Economie -->
-
-    <header>
-        <p>Economie</p> 
-    </header>
-
+    <header><a href="#economie">Economy</a></header>
 
     <section class="stiri-grid">
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/cartofi.jpg" alt="cartofi"> 
-                <p>Executivul a alocat mai mulți bani Programului de susținere a producției de cartof în acest an
-                </p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/cartofi.jpg" alt="cartofi" />
+          <p>
+            Government allocated more funds to support potato production this
+            year
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/posta-romana.jpg" alt="posta romana">
-                <p>Ministrul Digitalizării: Nu se pune problema desființării de oficii poștale</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/posta-romana.jpg" alt="posta romana" />
+          <p>
+            Digitalization Minister: Closing post offices isn't on the table
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/euro.jpg" alt="euro">
-                <p>Presa germană a calculat când va trece România la moneda euro. Bulgarii ne-o vor lua înainte</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/euro.jpg" alt="euro" />
+          <p>
+            German press estimated when Romania will adopt the euro. Bulgaria
+            will switch first
+          </p>
+        </a>
+      </article>
     </section>
-
-
 
     <!-- Sport -->
 
-    <header>
-        <p>Sport</p> 
-    </header>
-
+    <header><a href="#sport">Sport</a></header>
 
     <section class="stiri-grid">
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/ronaldoo.png" alt="Cristiano Ronaldo"> 
-                <p>Ce se întâmplă cu Cristiano Ronaldo în 2025. Contractul fotbalistului cu Al Nassr expiră
-                </p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/ronaldoo.png" alt="Cristiano Ronaldo" />
+          <p>
+            What happens with Cristiano Ronaldo in 2025 as his Al Nassr contract
+            expires
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/rodrigo.png" alt="Rodrigo Hernández">
-                <p>Ce poveste de viață are Rodri, spaniolul care a câștigat Balonul de Aur 2024</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/rodrigo.png" alt="Rodrigo Hernández" />
+          <p>
+            The life story of Rodri, the Spaniard who won the 2024 Ballon d'Or
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/nita.jpg" alt="Florin Niță ">
-                <p>Ce diagnostic a primit Florin Niță după accidentarea de la meciul România – Cipru</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/nita.jpg" alt="Florin Niță " />
+          <p>
+            The diagnosis Florin Niță received after the Romania–Cyprus match
+            injury
+          </p>
+        </a>
+      </article>
     </section>
 
+    <!-- Culture -->
 
-    <!-- Cultura -->
-
-    <header>
-        <p>Cultura</p> 
-    </header>
-
+    <header><a href="#cultura">Culture</a></header>
 
     <section class="stiri-grid">
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/notre-dame.jpg" alt="notre-dame"> 
-                <p>Clopotele de la  Notre-Dame de Paris au bătut din nou, pentru prima dată de la incendiul  din 2019
-                </p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/notre-dame.jpg" alt="notre-dame" />
+          <p>
+            Notre-Dame's bells ring again for the first time since the 2019 fire
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/muzeu.jpg" alt="muzeu">
-                <p>Muzeul Național de Istorie va fi restaurat. E cel de-al doilea cel mai mare monument istoric din Romania</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/muzeu.jpg" alt="muzeu" />
+          <p>
+            National History Museum will be restored. It's Romania's second
+            largest historical monument
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/codex-aureus.jpg" alt="codex-aureus">
-                <p>Premieră: Codex Aureus, cel mai important manuscris medieval occidental din România expus</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/codex-aureus.jpg" alt="codex-aureus" />
+          <p>
+            Premiere: Codex Aureus, Romania's most important Western medieval
+            manuscript on display
+          </p>
+        </a>
+      </article>
     </section>
 
+    <!-- Health -->
 
-    <!-- Sanatate -->
-
-    <header>
-        <p>Sanatate</p> 
-    </header>
-
+    <header><a href="#sanatate">Health</a></header>
 
     <section class="stiri-grid">
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/fluor.jpg" alt="rfk jr"> 
-                <p>Adevărul despre fluorul din apă, sare și pasta de dinți
-                </p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/fluor.jpg" alt="rfk jr" />
+          <p>The truth about fluoride in water, salt and toothpaste</p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/medicamente.jpg" alt="medicamente">
-                <p>Rezistența la medicamente antimicrobiene, inclusiv antibiotice, ucide 1,3 milioane de oameni pe an</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/medicamente.jpg" alt="medicamente" />
+          <p>
+            Resistance to antimicrobials, including antibiotics, kills 1.3
+            million people annually
+          </p>
+        </a>
+      </article>
 
-        <article class="stiri-item">
-            <a href="" class="stiri-text">
-                <img src="../resurse/zahar.jpg" alt="zahar">
-                <p>Băuturile cu zahăr adăugat duc la milioane de noi cazuri de diabet și boli de inimă în fiecare an (studiu)</p>
-            </a>
-        </article>
+      <article class="stiri-item">
+        <a href="" class="stiri-text">
+          <img src="../resurse/zahar.jpg" alt="zahar" />
+          <p>
+            Sugary drinks lead to millions of new diabetes and heart disease
+            cases yearly (study)
+          </p>
+        </a>
+      </article>
     </section>
-
-
 
     <!-- Footer -->
 
     <footer>
-        <section class="footer-content">
+      <section class="footer-content">
+        <figure class="footer-logo">
+          <img src="../logo.png" alt="CobraNEWS logo" />
+        </figure>
+        <nav class="footer-links">
+          <ul>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
 
-            <figure class="footer-logo">
-                <img src="../logo.png" alt="RO TV Logo">
-            </figure>
-            <nav class="footer-links">
-                <ul>
-                    <li><a href="#">Termeni și Condiții</a></li>
-                    <li><a href="#">Politica de Confidențialitate</a></li>
-                    <li><a href="#">Despre noi</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+        <address class="footer-contact">
+          <p>
+            Email:
+            <a href="mailto:lupauandrei27@gmail.com">lupauandrei27@gmail.com</a>
+          </p>
+          <p>Phone: <a href="tel:+40123456789">+40 123 456 789</a></p>
+        </address>
+      </section>
 
-            <address class="footer-contact">
-                <p>Email: <a href="mailto:lupauandrei27@gmail.com">lupauandrei27@gmail.com</a></p>
-                <p>Telefon: <a href="tel:+40123456789">+40 123 456 789</a></p>
-            </address>
-
-            <section class="footer-social">
-                <a href="#"><img src="../resurse/facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="../resurse/insta-icon.png" alt="Instagram"></a>
-                <a href="#"><img src="../resurse/twiiter-icon.png" alt="Twitter"></a>
-            </section>
-
-        </section>
-
-        <section class="footer-drepturi">
-            <p>© 2025 RO TV. Toate drepturile rezervate.</p>
-        </section>
+      <section class="footer-drepturi">
+        <p>© 2025 CobraNEWS. All rights reserved.</p>
+      </section>
     </footer>
-    
-</body>
+    <script src="../script.js"></script>
+  </body>
 </html>
