--- a/stiri-set/stire-set.html
+++ b/stiri-set/stire-set.html
@@ -12,19 +12,18 @@
   <body>
     <!-- Navigation -->
 
-    <nav aria-label="Main menu">
+    <nav class="nav-compact" aria-label="Main menu">
       <a href="../index.html" aria-label="Home page">
-        <img id="logo" src="../logo.png" alt="CobraNEWS logo" />
+        <img id="logo" src="../logo_simple.png" alt="CobraNEWS logo" />
       </a>
 
       <ul class="nav-left">
-        <li><a href="/live/live.html">Live</a></li>
+
         <li><a href="/stiri/stiri.html">News</a></li>
-        <li><a href="/articole/articole.html">Articles</a></li>
-        <li><a href="/emisiuni/emisiuni.html">Shows</a></li>
+
       </ul>
       <ul class="nav-right">
-        <li><a href="/despre/despre.html">About us</a></li>
+
         <li><a href="/contact/contact.html">Contact➣</a></li>
         <li>
           <button
@@ -103,15 +102,11 @@
         </address>
 
         <section class="footer-social">
-          <a href="#"
-            ><img src="../resurse/facebook-icon.png" alt="Facebook"
-          /></a>
+          <a href="#"><img src="../resurse/facebook-logo" alt="Facebook" /></a>
           <a href="#"
             ><img src="../resurse/insta-icon.png" alt="Instagram"
           /></a>
-          <a href="#"
-            ><img src="../resurse/twiiter-icon.png" alt="Twitter/X"
-          /></a>
+          <a href="#"><img src="../resurse/x-logo.png" alt="Twitter/X" /></a>
         </section>
       </section>
 
