--- a/stiri/stiri.html
+++ b/stiri/stiri.html
@@ -13,9 +13,9 @@
   <body>
     <!-- Navigation -->
 
-    <nav aria-label="Main menu">
+    <nav class="nav-compact" aria-label="Main menu">
       <a href="../index.html" aria-label="Home page">
-        <img id="logo" src="../logo.png" alt="CobraNEWS logo" />
+        <img id="logo" src="../logo_simple.png" alt="CobraNEWS logo" />
       </a>
       <ul class="nav-left">
         <li><a href="/stiri/stiri.html" class="active">News➣</a></li>
