--- a/contact/contact.html
+++ b/contact/contact.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav aria-label="Main menu">
+    <nav class="nav-compact" aria-label="Main menu">
       <a href="../index.html" aria-label="Home page">
-        <img id="logo" src="../logo.png" alt="CobraNEWS logo" />
+        <img id="logo" src="../logo_simple.png" alt="CobraNEWS logo" />
       </a>
       <ul class="nav-left">
         <li><a href="/stiri/stiri.html">News➣</a></li>
